--- a/index.html
+++ b/index.html
@@ -373,36 +373,51 @@ footer * {
     <footer>
       <!-- CONTAINER PRINCIPAL DO RODAPÉ - CORRIGIDO PARA EVITAR OVERFLOW -->
       <div style="max-width: 1200px; margin: 0 auto; padding: 0 1rem; box-sizing: border-box; overflow: hidden;">
-        <!-- LINHA 1: MÍDIAS SOCIAIS (CENTRALIZADAS) -->
-        <div style="text-align: center; margin-bottom: 0;">
-          <p class="footer-social-text" style="margin: 0; padding: 0;">Nossas
-            mídias sociais</p>
-          <div class="social-icons" style="margin-top: 0; margin-bottom: 0;">
-            <!-- LinkedIn --> <a href="https://www.linkedin.com/company/augen-arte-e-educacao/"
+      <!-- LINHA 1: MÍDIAS SOCIAIS (CENTRALIZADAS) -->
+<div style="text-align: center; margin-bottom: 0;">
+  <p class="footer-social-text" style="margin: 0; padding: 0;">Nossas mídias sociais</p>
+  <div class="social-icons" style="margin-top: 0; margin-bottom: 0; display:flex; justify-content:center; gap:1rem;">
 
-              target="_blank" rel="noopener noreferrer" aria-label="LinkedIn (abre em nova janela)">
-              <span class="sr-only">LinkedIn</span> </a>
-            <!-- Instagram --> <a href="https://www.instagram.com/augen.arte/"
+    <!-- LinkedIn -->
+    <a href="https://www.linkedin.com/company/augen-arte-e-educacao/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1.8rem" height="1.8rem" style="fill:currentColor;">
+        <path d="M4.98 3.5C3.34 3.5 2 4.84 2 6.48c0 1.64 1.34 2.98 2.98 2.98s2.98-1.34 2.98-2.98C7.96 4.84 6.62 3.5 4.98 3.5zM2.4 8.98h5.16v12.02H2.4V8.98zm7.44 0h4.94v1.64h.07c.69-1.31 2.37-2.69 4.88-2.69 5.22 0 6.18 3.44 6.18 7.9v8.17h-5.16v-7.23c0-1.72-.03-3.93-2.4-3.93-2.4 0-2.77 1.88-2.77 3.82v7.34H9.84V8.98z"/>
+      </svg>
+    </a>
 
-              target="_blank" rel="noopener noreferrer" aria-label="Instagram (abre em nova janela)">
-              <span class="sr-only">Instagram</span> </a>
-            <!-- Bluesky --> <a href="https://bsky.app/profile/augen-arte.bsky.social"
+    <!-- Instagram -->
+    <a href="https://www.instagram.com/augen.arte/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="1.8rem" height="1.8rem" style="fill:currentColor;">
+        <path d="M349.33 69.33H162.67C109.7 69.33 69.33 109.7 69.33 162.67v186.66c0 52.97 40.37 93.34 93.34 93.34h186.66c52.97 0 93.34-40.37 93.34-93.34V162.67c0-52.97-40.37-93.34-93.34-93.34zm61.33 280c0 34.06-27.61 61.67-61.33 61.67H162.67c-33.72 0-61.33-27.61-61.33-61.67V162.67c0-34.06 27.61-61.33 61.33-61.33h186.66c33.72 0 61.33 27.61 61.33 61.33v186.66z"/>
+        <circle cx="256" cy="256" r="80"/>
+        <circle cx="392" cy="120" r="20"/>
+      </svg>
+    </a>
 
-              target="_blank" rel="noopener noreferrer" aria-label="Bluesky (abre em nova janela)">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="24"
+    <!-- Bluesky -->
+    <a href="https://bsky.app/profile/augen-arte.bsky.social" target="_blank" rel="noopener noreferrer" aria-label="Bluesky">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="1.8rem" height="1.8rem" style="fill:currentColor">
+        <path d="M111.8 62.2C170.2 105.9 233 194.7 256 242.4c23-47.6 85.8-136.4 144.2-180.2c42.1-31.6 110.3-56 110.3 21.8c0 15.5-8.9 130.5-14.1 149.2C478.2 298 412 314.6 353.1 304.5c102.9 17.5 129.1 75.5 72.5 133.5c-107.4 110.2-154.3-27.6-166.3-62.9l0 0c-1.7-4.9-2.6-7.8-3.3-7.8s-1.6 3-3.3 7.8l0 0c-12 35.3-59 173.1-166.3 62.9c-56.5-58-30.4-116 72.5-133.5C100 314.6 33.8 298 15.7 233.1C10.4 214.4 1.5 99.4 1.5 83.9c0-77.8 68.2-53.4 110.3-21.8z"></path>
+      </svg>
+    </a>
 
-                height="24" style="width:1.8rem;height:1.8rem;fill:currentColor"
+    <!-- E-mail -->
+    <a href="mailto:contato@augen.art.br" aria-label="Enviar e-mail">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="1.8rem" height="1.8rem" style="fill:currentColor;">
+        <path d="M502.3 190.8L327.4 338.7c-10.4 9.1-25.7 9.1-36.1 0L9.7 190.8C3.9 186.2 0 179.3 0 172V432c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V172c0 7.3-3.9 14.2-9.7 18.8zM464 80H48C21.5 80 0 101.5 0 128v26.7l256 223.3 256-223.3V128c0-26.5-21.5-48-48-48z"/>
+      </svg>
+    </a>
 
-                aria-hidden="true">
-                <path d="M111.8 62.2C170.2 105.9 233 194.7 256 242.4c23-47.6 85.8-136.4 144.2-180.2c42.1-31.6 110.3-56 110.3 21.8c0 15.5-8.9 130.5-14.1 149.2C478.2 298 412 314.6 353.1 304.5c102.9 17.5 129.1 75.5 72.5 133.5c-107.4 110.2-154.3-27.6-166.3-62.9l0 0c-1.7-4.9-2.6-7.8-3.3-7.8s-1.6 3-3.3 7.8l0 0c-12 35.3-59 173.1-166.3 62.9c-56.5-58-30.4-116 72.5-133.5C100 314.6 33.8 298 15.7 233.1C10.4 214.4 1.5 99.4 1.5 83.9c0-77.8 68.2-53.4 110.3-21.8z"></path>
-              </svg> <span class="sr-only">Bluesky</span> </a>
-            <!-- E-mail --> <a href="mailto:contato@augen.art.br" aria-label="Enviar e-mail para contato@augen.art.br">
-              <span class="sr-only">E-mail</span> </a>
-            <!-- WhatsApp --> <a href="https://api.whatsapp.com/send?phone=5511989549805"
+    <!-- WhatsApp -->
+    <a href="https://api.whatsapp.com/send?phone=5511989549805" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="1.8rem" height="1.8rem" style="fill:currentColor;">
+        <path d="M380.9 97.1C339-3.6 259-40.9 176.8 7.7 88.9 57.2 57.6 151 59.3 212.1l-25.8 93.6 101.1-26.6c50.3-13.3 108.2-56.2 137.2-91.4 30.6-36.5 53.3-83.2 41.1-110.6zM256 368c-79.4 0-144-64.6-144-144S176.6 80 256 80s144 64.6 144 144-64.6 144-144 144z"/>
+      </svg>
+    </a>
 
-              target="_blank" rel="noopener noreferrer" aria-label="WhatsApp (abre em nova janela)">
-              <span class="sr-only">WhatsApp</span> </a> </div>
-        </div>
+  </div>
+</div>
+
         <!-- LINHA 2: CONTEÚDO CENTRALIZADO (JÁ ESTÁ CENTRALIZADO) -->
         <div style="text-align: center; margin-top: 1rem; margin-bottom: 1rem;">
           <p style="margin: 0; padding-top: 0.5rem;">Outros selos <a href="https://www.arteeeducacao.art.br/"
@@ -468,5 +483,6 @@ footer * {
 </script> </body>
   <!-- Fim do corpo da página --><!-- SCRIPT PRINCIPAL (com botões de voltar focáveis) -->
 </html>
+
 
 
